--- a/app/src/main/res/values-v21/strings.xml
+++ b/app/src/main/res/values-v21/strings.xml
@@ -4,10 +4,10 @@
     <string name="title_home">Home</string>
     <string name="title_dashboard">Dashboard</string>
     <string name="title_notifications">Notifications</string>
-    <string name="default_city">WuHu</string>
+    <string name="default_city">ShangHai</string>
     <string name="menu_settings">Settings</string>
     <string name="menu_about">About</string>
     <string name="menu_feedback">Feedback</string>
-    <string name="menu_cities_1">ShangHai</string>
-    <string name="menu_cities_2">WuHu</string>
+    <string name="menu_cities_sh">ShangHai</string>
+    <string name="menu_cities_wh">WuHu</string>
 </resources>
