--- a/app/src/main/res/values-zh-rCN/strings.xml
+++ b/app/src/main/res/values-zh-rCN/strings.xml
@@ -5,11 +5,11 @@
     <string name="title_home">Home</string>
     <string name="title_dashboard">Dashboard</string>
     <string name="title_notifications">Notifications</string>
-    <string name="default_city">芜湖</string>
+    <string name="default_city">上海</string>
     <string name="menu_settings">设置</string>
     <string name="menu_about">关于</string>
     <string name="menu_feedback">反馈</string>
-    <string name="menu_cities_1">上海</string>
-    <string name="menu_cities_2">芜湖</string>
+    <string name="menu_cities_sh">上海</string>
+    <string name="menu_cities_wh">芜湖</string>
     <string name="menu_switch_city">切换城市</string>
 </resources>
