--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -8,7 +8,7 @@
     <string name="menu_settings">Settings</string>
     <string name="menu_about">About</string>
     <string name="menu_feedback">Feedback</string>
-    <string name="menu_cities_1">ShangHai</string>
-    <string name="menu_cities_2">WuHu</string>
+    <string name="menu_cities_sh">ShangHai</string>
+    <string name="menu_cities_wh">WuHu</string>
     <string name="menu_switch_city">Switch City</string>
 </resources>
