--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -10,5 +10,5 @@
     <string name="menu_feedback">Feedback</string>
     <string name="menu_cities_sh">ShangHai</string>
     <string name="menu_cities_wh">WuHu</string>
-    <string name="menu_switch_city">Switch City</string>
+    <string name="menu_add_bus">Add</string>
 </resources>
