--- a/app/src/main/res/values-zh-rCN/strings.xml
+++ b/app/src/main/res/values-zh-rCN/strings.xml
@@ -15,4 +15,5 @@
     <string name="input_prompt_sh" >请输入完整的线路名称，仅限中文和数字</string>
     <string name="input_prompt_wh">请输入线路名称，仅需数字即可</string>
     <string name="input_line_hint">请输入线路名称</string>
+    <string name="line">路</string>
 </resources>
