--- a/app/src/main/res/values-zh-rCN/strings.xml
+++ b/app/src/main/res/values-zh-rCN/strings.xml
@@ -5,15 +5,15 @@
     <string name="title_home">Home</string>
     <string name="title_dashboard">Dashboard</string>
     <string name="title_notifications">Notifications</string>
-    <string name="default_city">上海</string>
     <string name="menu_settings">设置</string>
     <string name="menu_about">关于</string>
     <string name="menu_feedback">反馈</string>
-    <string name="menu_cities_sh">上海</string>
-    <string name="menu_cities_wh">芜湖</string>
+    <string name="city_sh">上海</string>
+    <string name="city_wh">芜湖</string>
     <string name="menu_add_bus">添加</string>
     <string name="input_prompt_sh" >请输入完整的线路名称，仅限中文和数字</string>
     <string name="input_prompt_wh">请输入线路名称，仅需数字即可</string>
     <string name="input_line_hint">请输入线路名称</string>
     <string name="line">路</string>
+    <string name="city_nj">南京</string>
 </resources>
