--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -4,15 +4,15 @@
     <string name="title_home">Home</string>
     <string name="title_dashboard">Dashboard</string>
     <string name="title_notifications">Notifications</string>
-    <string name="default_city">shanghai</string>
     <string name="menu_settings">Settings</string>
     <string name="menu_about">About</string>
     <string name="menu_feedback">Feedback</string>
-    <string name="menu_cities_sh">ShangHai</string>
-    <string name="menu_cities_wh">WuHu</string>
+    <string name="city_sh">ShangHai</string>
+    <string name="city_wh">WuHu</string>
     <string name="menu_add_bus">Add</string>
     <string name="input_prompt_sh" >Please enter the full line name,Such as \"763路\"、\"46路区间\"</string>
     <string name="input_prompt_wh">Please enter the line name, just the number</string>
     <string name="input_line_hint">Please enter the line name</string>
     <string name="line">line</string>
+    <string name="city_nj">NanJing</string>
 </resources>
