0114 添加芜湖的查询数据 big issue！！！数据库插入存在问题

--- a/app/src/main/res/values-zh-rCN/strings.xml
+++ b/app/src/main/res/values-zh-rCN/strings.xml
@@ -16,4 +16,5 @@
     <string name="input_line_hint">请输入线路名称</string>
     <string name="line">路</string>
     <string name="city_nj">南京</string>
+    <string name="TipWord">查询中，请稍等</string>
 </resources>
