--- a/app/src/main/res/values-zh-rCN/strings.xml
+++ b/app/src/main/res/values-zh-rCN/strings.xml
@@ -18,4 +18,11 @@
     <string name="city_nj">南京</string>
     <string name="TipWord">查询中，请稍等</string>
     <string name="waiting">等待发车</string>
+    <string name="plate">车牌:</string>
+    <string name="cancel">取消</string>
+    <string name="save">收藏</string>
+    <string name="distance">距离：</string>
+    <string name="remaining">剩余:</string>
+    <string name="station">站</string>
+    <string name="stations">站</string>
 </resources>
