0124 添加自动刷新开关 todo：关闭自动刷新后的显示状态需要调整

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -26,4 +26,6 @@
     <string name="stations">stations</string>
     <string name="noData">Void</string>
     <string name="not_found">This line has not been found yet</string>
+    <string name="auto_refresh">Page Auto Refresh</string>
+    <string name="auto_refresh_time">Auto refresh time interval</string>
 </resources>
