--- a/app/src/main/res/values-zh-rCN/strings.xml
+++ b/app/src/main/res/values-zh-rCN/strings.xml
@@ -27,4 +27,6 @@
     <string name="stations">站</string>
     <string name="noData">暂无</string>
     <string name="not_found">暂未查询到此线路</string>
+    <string name="auto_refresh">主页自动刷新</string>
+    <string name="auto_refresh_time">自动刷新间隔</string>
 </resources>
